--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "minimist": "^1.2.0",
     "moment": "^2.13.0",
     "mongoose": "^4.6.1",
-    "morgan": "~1.3.0",
+    "morgan": "^1.9.1",
     "passport": "^0.3.2",
     "passport-local": "^1.0.0",
     "passport-local-mongoose": "^4.0.0",
